# squonk2-skl

./: .gitignore  README.md  environment-im-skl.yaml  pyproject.toml  utils.py
data/: caco2_maccs.smi
skl/: maccs.py  rf.py  scikitmol.py  skl_prepare_data.py  svr.py  x_rf.py
skl/helpers/: utils.py
src/: arrayinput.py  hyperparams.py  maccs.py  rf.py  scikitmol.py  skl_prepare_data.py  svr.py  x_rf.py
src/helpers/: cross_train.py  get_data.py  utils.py
